src/tests/Metalama.Patterns.Caching.AspectTests/InvalidateCacheAttributeTests/Diagnostics/WithEmptyMethodName.t.cs
// Error LAMA5104 on `Invalidate`: `Invalid [InvalidateCache] aspect on WithEmptyMethodName.CachingClass.Invalidate(): the constructor parameters cannot contain a null, empty or whitespace-only string.`